--- a/exercises/DE_limma.Rmd
+++ b/exercises/DE_limma.Rmd
@@ -3,6 +3,9 @@ title: "Differential Expression Analysis with limma"
 author: "Carson Stacy & Jeffrey Lewis"
 date: "Fall 2023"
 output: html_document
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
 last updated: `r Sys.Date()`
@@ -28,13 +31,16 @@ p_load("tidyverse", "knitr", "readr",
        "reactable") # for pretty tables.
 
 # We also need these Bioconductor packages today.
-p_load("limma", "AnnotationDbi", "org.Sc.sgd.db")
+p_load("edgeR", "AnnotationDbi", "org.Sc.sgd.db")
+#NOTE: edgeR loads limma as a dependency
 ```
-
 
 # Description
 
-This will be our last differential expression analysis workflow, converting gene counts across samples into meaningful information about genes that appear to be significantly differentially expressed between samples
+This will be our last differential expression analysis workflow,
+converting gene counts across samples into meaningful information about
+genes that appear to be significantly differentially expressed between
+samples
 
 # Learning outcomes
 
@@ -42,8 +48,8 @@ At the end of this exercise, you should be able to:
 
 -   Generate a table of sample metadata.
 -   Filter low counts and normalize count data.
--   Utilize the limma package to identify differentially expressed genes.
-
+-   Utilize the limma package to identify differentially expressed
+    genes.
 
 ```{r load-libraries}
 library(limma)
@@ -52,16 +58,21 @@ library(org.Sc.sgd.db)
 options(digits=3)
 ```
 
-# Loading in the featureCounts object 
+# Loading in the featureCounts object
 
-We saved this file in the last exercise (Read_Counting.Rmd) from the RSubread package. Now we can load that object back in and assign it to the variable `fc`. Be sure to change the file path if you have saved it in a different location.
+We saved this file in the last exercise (Read_Counting.Rmd) from the
+RSubread package. Now we can load that object back in and assign it to
+the variable `fc`. Be sure to change the file path if you have saved it
+in a different location.
+
 ```{r load-fc, error=TRUE}
 path_fc_object <- path.expand("~/Desktop/Genomic_Data_Analysis/Data/yeast_fc_output.Rds")
 fc <- readRDS(file = path_fc_object)
 ```
 
+If you don't have that file for any reason, the below code chunk will
+load a copy of it from Github.
 
-If you don't have that file for any reason, the below code chunk will load a copy of it from Github.
 ```{r altLoad-fc}
 if( !exists("fc") )
 {
@@ -69,11 +80,12 @@ if( !exists("fc") )
 }
 ```
 
-To find the order of files we need, we can get just the part of the column name before the first "." symbol with this command:
+To find the order of files we need, we can get just the part of the
+column name before the first "." symbol with this command:
+
 ```{r identify-sampleOrder}
 str_split_fixed(fc$counts %>% colnames(), "\\.", n = 2)[, 1]
 ```
-
 
 ```{r generate-metadata}
 sample_metadata <- tribble(
@@ -118,15 +130,19 @@ Now, let's create a design matrix with this information
 ```{r}
 group <- sample_metadata$Group
 design <- model.matrix(~ 0 + group)
-design
+
+# beautify column names
 colnames(design) <- levels(group)
 design
 ```
 
-
 # Count loading and Annotation
 
-The count matrix is used to construct a DGEList class object. This is the main data class in the edgeR package. The DGEList object is used to store all the information required to fit a generalized linear model to the data, including library sizes and dispersion estimates as well as counts for each gene.
+The count matrix is used to construct a DGEList class object. This is
+the main data class in the edgeR package. The DGEList object is used to
+store all the information required to fit a generalized linear model to
+the data, including library sizes and dispersion estimates as well as
+counts for each gene.
 
 ```{r load-counts}
 y <- DGEList(fc$counts, group=group)
@@ -134,7 +150,8 @@ colnames(y) <- sample_metadata$Sample
 y$samples
 ```
 
-Human-readable gene symbols can also be added to complement the gene ID for each gene, using the annotation in the org.Sc.sgd.db package.
+Human-readable gene symbols can also be added to complement the gene ID
+for each gene, using the annotation in the org.Sc.sgd.db package.
 
 ```{r}
 y$genes <- AnnotationDbi::select(org.Sc.sgd.db,keys=rownames(y),columns="GENENAME")
@@ -142,11 +159,15 @@ y$genes <- AnnotationDbi::select(org.Sc.sgd.db,keys=rownames(y),columns="GENENAM
 head(y$genes)
 ```
 
-
 # Filtering to remove low counts
 
-
-Genes with very low counts across all libraries provide little evidence for differential ex- pression. In addition, the pronounced discreteness of these counts interferes with some of the statistical approximations that are used later in the pipeline. These genes should be filtered out prior to further analysis. Here, we will retain a gene only if it is expressed at a count-per-million (CPM) above 60 in at least four samples.
+Genes with very low counts across all libraries provide little evidence
+for differential ex- pression. In addition, the pronounced discreteness
+of these counts interferes with some of the statistical approximations
+that are used later in the pipeline. These genes should be filtered out
+prior to further analysis. Here, we will retain a gene only if it is
+expressed at a count-per-million (CPM) above 60 in at least four
+samples.
 
 ```{r filter-lowCounts}
 keep <- rowSums(cpm(y) > 60) >= 4
@@ -156,25 +177,44 @@ summary(keep)
 
 Where did those cutoff numbers come from?
 
-As a general rule, we don't want to exclude a gene that is expressed in only one group, so a cutoff number equal to the number of replicates can be a good starting point. For counts, a good threshold can be chosen by identifying the CPM that corresponds to a count of 10, which in this case would be about 60 (due to our fastq files being subsets of the full reads):
+As a general rule, we don't want to exclude a gene that is expressed in
+only one group, so a cutoff number equal to the number of replicates can
+be a good starting point. For counts, a good threshold can be chosen by
+identifying the CPM that corresponds to a count of 10, which in this
+case would be about 60 (due to our fastq files being subsets of the full
+reads):
+
 ```{r estimate-cpmCutoff}
 cpm(10, mean(y$samples$lib.size))
 ```
 
 Smaller CPM thresholds are usually appropriate for larger libraries.
 
-
 # Normalization for composition bias
 
-TMM normalization is performed to eliminate composition biases between libraries. This generates a set of normalization factors, where the product of these factors and the library sizes defines the effective library size. The calcNormFactors function returns the DGEList argument with only the norm.factors changed.
+TMM normalization is performed to eliminate composition biases between
+libraries. This generates a set of normalization factors, where the
+product of these factors and the library sizes defines the effective
+library size. The calcNormFactors function returns the DGEList argument
+with only the norm.factors changed.
 
 ```{r calc-normFactors}
 y <- calcNormFactors(y)
 y$samples
 ```
 
-The normalization factors multiply to unity across all libraries. A normalization factor below unity indicates that the library size will be scaled down, as there is more suppression (i.e., composition bias) in that library relative to the other libraries. This is also equivalent to scaling the counts upwards in that sample. Conversely, a factor above unity scales up the library size and is equivalent to downscaling the counts.
-The performance of the TMM normalization procedure can be examined using mean- difference (MD) plots. This visualizes the library size-adjusted log-fold change between two libraries (the difference) against the average log-expression across those libraries (the mean). The below command plots an MD plot, comparing sample 1 against an artificial library constructed from the average of all other samples.
+The normalization factors multiply to unity across all libraries. A
+normalization factor below unity indicates that the library size will be
+scaled down, as there is more suppression (i.e., composition bias) in
+that library relative to the other libraries. This is also equivalent to
+scaling the counts upwards in that sample. Conversely, a factor above
+unity scales up the library size and is equivalent to downscaling the
+counts. The performance of the TMM normalization procedure can be
+examined using mean- difference (MD) plots. This visualizes the library
+size-adjusted log-fold change between two libraries (the difference)
+against the average log-expression across those libraries (the mean).
+The below command plots an MD plot, comparing sample 1 against an
+artificial library constructed from the average of all other samples.
 
 ```{r plotMDS, fig.show="hold", out.width="25%"}
 for (sample in 1:nrow(y$samples)) {
@@ -185,7 +225,10 @@ for (sample in 1:nrow(y$samples)) {
 
 # Exploring differences between libraries
 
-The data can be explored by generating multi-dimensional scaling (MDS) plots. This visualizes the differences between the expression profiles of different samples in two dimensions. The next plot shows the MDS plot for the yeast heatshock data.
+The data can be explored by generating multi-dimensional scaling (MDS)
+plots. This visualizes the differences between the expression profiles
+of different samples in two dimensions. The next plot shows the MDS plot
+for the yeast heatshock data.
 
 ```{r plot-MDS}
 points <- c(1,1,2,2)
@@ -195,51 +238,59 @@ legend("topright", legend=levels(group),
      pch=points, col=colors, ncol=2)
 ```
 
-
-
 # Estimate Dispersion
 
-The trended NB dispersion is estimated using the estimateDisp function. This returns
-the DGEList object with additional entries for the estimated NB dispersions for all genes.
-These estimates can be visualized with plotBCV, which shows the root-estimate, i.e., the
-biological coefficient of variation for each gene
+This is the first step in a limma analysis that differs from the edgeR
+workflow.
 
 ```{r estimate-dispersion}
-y <- estimateDisp(y, design, robust=TRUE)
-plotBCV(y)
+
+y <- voom(y, design, plot = T)
+
+# compare this to the edgeR function estimateDisp, which uses a NB distribution.
+# y <- estimateDisp(y, design, robust=TRUE)
+# plotBCV(y)
 ```
 
-In general, the trend in the NB dispersions should decrease smoothly with increasing
-abundance. This is because the expression of high-abundance genes is expected to be more
-stable than that of low-abundance genes. Any substantial increase at high abundances may
-be indicative of batch effects or trended biases. The value of the trended NB dispersions
-should range between 0.005 to 0.05 for laboratory-controlled biological systems like mice
-or cell lines, though larger values will be observed for patient-derived data (> 0.1)
+What is voom doing?
 
+-   Counts are transformed to log2 counts per million reads (CPM), where
+    "per million reads" is defined based on the normalization factors we
+    calculated earlier
 
-For the QL dispersions, estimation can be performed using the glmQLFit function. This
-returns a DGEGLM object containing the estimated values of the GLM coefficients for each
-gene
+-   A linear model is fitted to the log2 CPM for each gene, and the
+    residuals are calculated
+
+-   A smoothed curve is fitted to the sqrt(residual standard deviation)
+    by average expression (see red line in plot above)
+
+-   The smoothed curve is used to obtain weights for each gene and
+    sample that are passed into limma along with the log2 CPMs.
+
+Limma uses the `lmFit` function. This returns a MArrayLM object
+containing the weighted least squares estimates for each gene.
+
 ```{r generate-fit}
-fit <- glmQLFit(y, design, robust=TRUE)
-head(fit$coefficients)
-plotQLDisp(fit)
+fit <- lmFit(y, design)
+head(coef(fit))
+
+# edgeR equivalent
+# fit <- glmQLFit(y, design, robust=TRUE)
+# head(fit$coefficients)
+# plotQLDisp(fit)
 ```
 
-EB squeezing of the raw dispersion estimators towards the trend reduces the uncertainty of the final estimators. The extent of this moderation is determined by the value of the prior df, as estimated from the data. Large estimates for the prior df indicate that the QL dispersions are less variable between genes, meaning that stronger EB moderation can be performed. Small values for the prior df indicate that the dispersions are highly
-variable, meaning that strong moderation would be inappropriate
-
-Setting robust=TRUE in glmQLFit is strongly recommended. This causes glmQLFit to estimate a vector of df.prior values, with lower values for outlier genes and larger values for the main body of genes.
-
+Comparisons between groups (log fold-changes) are obtained as
+*contrasts* of these fitted linear models:
 
 # Testing for differential expression
 
-The final step is to actually test for significant differential expression in each gene, using
-the QL F-test. The contrast of interest can be specified using the makeContrasts function.
-Here, genes are detected that are DE between the stressed and unstressed.
-This is done by defining the null hypothesis as heat stressed - unstressed = 0.
+The final step is to actually test for significant differential
+expression in each gene, using the QL F-test. The contrast of interest
+can be specified using the `makeContrasts` function in limma, the same
+one that is used by edgeR.
 
-```{r fit-contrast}
+```{r fit-contrasts}
 # generate contrasts we are interested in learning about
 my.contrasts <- makeContrasts(EtOHvsMOCK.WT = WT.EtOH - WT.unstressed, 
                      EtOHvsMOCK.MSN24dd = msn24dd.EtOH - msn24dd.unstressed,
@@ -248,56 +299,114 @@ my.contrasts <- makeContrasts(EtOHvsMOCK.WT = WT.EtOH - WT.unstressed,
                      EtOHvsWT.MSN24ddvsWT = (msn24dd.EtOH-msn24dd.unstressed)-(WT.EtOH-WT.unstressed),
                      levels=design)
 
+# fit the linear model to these contrasts
+res_all <- contrasts.fit(fit, my.contrasts)
+
+# This looks at all of our contrasts in my.contrasts
+res_all <- eBayes(res_all)
+
+# eBayes is the alternative to glmQLFTest in edgeR
 # This contrast looks at the difference in the stress responses between mutant and WT
-res <- glmQLFTest(fit, contrast = my.contrasts[,"EtOHvsWT.MSN24ddvsWT"])
+# res <- glmQLFTest(fit, contrast = my.contrasts)
+```
+
+```{r create-TableAll}
+
+top.table <- topTable(res_all, sort.by = "F", n = Inf)
+head(top.table, 20)
+
+top.table %>% 
+  tibble() %>% 
+  arrange(adj.P.Val) %>%
+  mutate(across(where(is.numeric), signif, 3)) %>%
+  reactable()
+
+# edgeR equivalent below:
+
+# let's take a quick look at the results
+# topTags(res, n=10) 
+# 
+# # generate a beautiful table for the pdf/html file.
+# topTags(res, n=Inf) %>% data.frame() %>% 
+#   arrange(FDR) %>%
+#   mutate(logFC=round(logFC,2)) %>%
+#   mutate(across(where(is.numeric), signif, 3)) %>%
+#   reactable()
+```
+
+```{r summarize-DEgenes, fig.height=7, fig.width=10}
+# Let's see how many genes in total are significantly different in any contrast
+length(which(top.table$adj.P.Val < 0.05))
+
+# let's summarize this and break it down by contrast.
+res_all %>%
+  decideTests(p.value = 0.05, lfc = 0) %>%
+  summary()
+
+# Bonus: limma allows us to create a venn diagram of these contrasts 
+# up & downregulated genes
+res_all %>%
+  decideTests(p.value = 0.05, lfc = 1) %>% 
+  vennDiagram(include=c("up", "down"),
+              lwd=0.75,
+              mar=rep(2,4), # increase margine size
+              counts.col= c("red", "blue"),
+              show.include=TRUE)
+
+```
+
+## Looking at a specific contrast
+
+It is interesting to see all of the contrasts simultaneously, but often
+we may want to look at just a single contrast (and get the corresponding
+probabilities). Here is how we do that:
+
+```{r fit-contrast}
+# fit the linear model to these contrasts
+res <- contrasts.fit(fit, my.contrasts[,"EtOHvsWT.MSN24ddvsWT"])
+
+# This contrast looks at the difference in the stress responses between mutant and WT
+res <- eBayes(res)
 ```
 
 ```{r create-Table}
-# let's take a quick look at the results
-topTags(res, n=10) 
+# Note that there is no longer an "F" column, because we only look at one contrast.
+top.table <- topTable(res, sort.by = "P", n = Inf)
+head(top.table, 20)
 
-# generate a beautiful table for the pdf/html file.
-topTags(res, n=Inf) %>% data.frame() %>% 
-  arrange(FDR) %>%
-  mutate(logFC=round(logFC,2)) %>%
+top.table %>% 
+  tibble() %>% 
+  arrange(adj.P.Val) %>%
   mutate(across(where(is.numeric), signif, 3)) %>%
   reactable()
-```
 
-```{r summarize-DEgenes}
-is.de <- decideTestsDGE(res, p.value=0.05)
-summary(is.de)
-```
-
-Let's take a quick look at the differential expression
-```{r visualize-DEgenes}
-plotSmear(res, de.tags=rownames(res)[is.de!=0])
 ```
 
 We need to make sure and save our output file(s).
+
 ```{r save-res}
 # Choose topTags destination
-dir_output_edgeR <-
-  path.expand("~/Desktop/Genomic_Data_Analysis/Analysis/edgeR/")
-if (!dir.exists(dir_output_edgeR)) {
-  dir.create(dir_output_edgeR, recursive = TRUE)
+dir_output_limma <-
+  path.expand("~/Desktop/Genomic_Data_Analysis/Analysis/limma/")
+if (!dir.exists(dir_output_limma)) {
+  dir.create(dir_output_limma, recursive = TRUE)
 }
 
 # for shairng with others, the topTags output is convenient.
-topTags(res, n = Inf) %>% data.frame() %>%
-  arrange(desc(logFC)) %>%
-  mutate(logFC = round(logFC, 2)) %>%
+top.table %>% tibble() %>%
+  arrange(desc(adj.P.Val)) %>%
+  mutate(adj.P.Val = round(adj.P.Val, 2)) %>%
   mutate(across(where(is.numeric), signif, 3)) %>%
-  write_tsv(., file = paste0(dir_output_edgeR, "yeast_topTags_edgeR.tsv"))
+  write_tsv(., file = paste0(dir_output_limma, "yeast_topTags_limma.tsv"))
 
 # for subsequent analysis, let's save the res object as an R data object.
-saveRDS(object = res, file = paste0(dir_output_edgeR, "yeast_res_edgeR.Rds"))
+saveRDS(object = res, file = paste0(dir_output_limma, "yeast_res_limma.Rds"))
 ```
-
 
 Be sure to knit this file into a pdf or html file once you're finished.
 
 System information for reproducibility:
+
 ```{r}
 pander::pander(sessionInfo())
 ```
