increased nthreads for align, also sort by coordinates
also created HPC salmon guide

--- a/exercises/04_Read_Mapping.Rmd
+++ b/exercises/04_Read_Mapping.Rmd
@@ -106,7 +106,8 @@ align(index=index_reference_genome,
       output_format = "BAM",
       unique = TRUE,
       nBestLocations = 1,
-      nthreads=4
+      sortReadsByCoordinates = TRUE,
+      nthreads=6
       )
 ```
 
